--- a/ex/src/main/resources/static/css/style.css
+++ b/ex/src/main/resources/static/css/style.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 
-h1{
-	color:red;
+.title h1{
+  position: relative;
+  padding: 0;
+  margin: 0;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 50px;
+  color: LightSlateGray;
 }
