--- a/ex/src/main/resources/static/css/header.css
+++ b/ex/src/main/resources/static/css/header.css
@@ -24,7 +24,6 @@ h1{
 .header{
 	line-height: 100px;
 	background:#9BC86A; 
-	margin-bottom: 50px;
 }
 
 .header h1 {
@@ -69,7 +68,7 @@ td {
 
 th {
   padding: 8px;
-  text-align: left;
+  text-align: center;
   border-top: 2px solid #000;
   border-bottom: 2px solid #000;
   color: #000;
